Bug fix overlap, zwart en ruitmes

--- a/css/ezweb.css
+++ b/css/ezweb.css
@@ -186,9 +186,24 @@ h2 {
 }
 
 #productsPage {
-    height: 50vh;
+    height: 60vh;
     position: relative;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+#productsPage::after {
+    content: " ";
+    height: 10%;
+    width: 200vw;
+    position: absolute;
+    background-color: black;
+    bottom: 0;
+    left: 0;
+    transform: rotate(2deg) translateY(95%) translateX(-300px);
+    z-index: 1;
 }
 
 #productsSection {
@@ -196,6 +211,8 @@ h2 {
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
+    height: 83%;
+    margin: 0;
 }
 
 #productsSection .productPackage {
@@ -213,6 +230,7 @@ h2 {
 #productsSection .productPackage:hover {
     transform: translateY(-5px) scale(1.005) translateZ(0);
     box-shadow: 0 24px 36px rgba(0, 0, 0, 0.11), 0 24px 46px var(--box-shadow-color);
+    z-index: 2;
 }
 
 /* *Card content. */
@@ -307,9 +325,14 @@ h2 {
 }
 
 /* ------------------------------------------------------ Work. ------------------------------------------------------ */
+#workPage {
+    background-color: black;
+    height: 50vh;
+}
 
 #workSection h2 {
     text-align: center;
+    color: white;
 }
 
 #workImagesContainer {
@@ -338,7 +361,7 @@ h2 {
     height: 10%;
     width: 200vw;
     position: absolute;
-    background-color: var(--primaryBackgroundColour);
+    background-color: black;
     top: 0;
     left: 0;
     transform: rotate(2deg) translateY(-10%) translateX(-300px);
